--- a/jivetime/templates/jivetime/occurrence_detail.html
+++ b/jivetime/templates/jivetime/occurrence_detail.html
@@ -2,7 +2,7 @@
 {% block title %}Event Occurrence{% endblock %}
 {% block content %}
 
-    <div class="text-center">
+    <div class="text-left">
         {% include "jivetime/include/menu_scope.html" %}
     </div>
 
