--- a/jivetime/templates/jivetime/monthly_view.html
+++ b/jivetime/templates/jivetime/monthly_view.html
@@ -3,7 +3,7 @@
 
 {% block content %}
 
-    <div class="text-center">
+    <div class="text-left">
 
         {% include "jivetime/include/menu_scope.html" %}
 
@@ -13,10 +13,10 @@
                title="Previous Month">&larr; {{ last_month|date:"m/Y" }}
             </a>
 
-            <form action="." method="post" class="jive-btn-group px-2">
+            <form action="{% url 'jivetime:calendar-year' group.id today.year %}" method="post" class="jive-btn-group px-2">
                 {% csrf_token %}
                 <input type="date" name="date" value="{{ this_month|date:"Y-m-d" }}"/>
-                <input type="submit" name="_goto" value="Go to selected" class="jive-btn"/>
+                <input type="submit" name="_goto" value="Go to month" class="jive-btn"/>
             </form>
 
             <a class="jive-btn"
