--- a/jivetime/templates/jivetime/monthly_view.html
+++ b/jivetime/templates/jivetime/monthly_view.html
@@ -3,8 +3,7 @@
 
 {% block content %}
 
-    <div class="text-left">
-
+    <div class="text-left pb-10">
         {% include "jivetime/include/menu_scope.html" %}
 
         <div class="jive-btn-group pl-10">
