--- a/jivetime/templates/jivetime/include/cal_grid.html
+++ b/jivetime/templates/jivetime/include/cal_grid.html
@@ -8,7 +8,7 @@
             <div class="border">
                 {% if day %}
                     <a title="see day detail"
-                       class="block bg-secondary text-secondary-content text-center py-2"
+                       class="block bg-primary-content text-primary text-center py-2 hover:drop-shadow"
                        href="{% url 'jivetime:calendar-day' group.id this_month.year this_month.month day %}">
                         {{ day }}
                     </a>
