--- a/jivetime/templates/jivetime/occurrence_detail.html
+++ b/jivetime/templates/jivetime/occurrence_detail.html
@@ -2,24 +2,28 @@
 {% block title %}Event Occurrence{% endblock %}
 {% block content %}
 
-    <div class="text-left">
+    <div class="text-left pb-10">
         {% include "jivetime/include/menu_scope.html" %}
     </div>
 
-    <div class="py-4 text-center font-bold">
-        Occurrence Details
-    </div>
+    <h3 class="jive-title">
+        Event Details
+    </h3>
 
     <div class="pb-4">
         <div class="inline-block w-40 font-bold">
-            Event
+            Event Name
         </div>
+        {{ occurrence.event.title }}
         <a href="{{ occurrence.event.get_absolute_url }}"
-           class="jive-btn">
-            {{ occurrence.title }}
+           class="jive-btn jive-btn-primary jive-btn-sm">
+            See Event Details
         </a>
-
     </div>
+
+    <h3 class="jive-title">
+        Occurrence Details
+    </h3>
 
     <form action="" method="post">
         {% csrf_token %}
@@ -45,7 +49,7 @@
 
             <input type="submit"
                    name="_delete"
-                   class="jive-btn-danger jive-btn"
+                   class="jive-btn-error jive-btn"
                    value="Remove this occurrence"/>
         </div>
 
